--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "gymtester",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://gym-tester.herokuapp.com/",
   "main": "index.js",
   "scripts": {
-"start":"node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
